syntax = "proto3";

package example;

option go_package = "github.com/Verce11o/example/protos;example";

import "google/protobuf/timestamp.proto";

service ExampleService {
  rpc CreateExample(CreateExampleRequest) returns (CreateExampleResponse);
  rpc GetExample(GetExampleRequest) returns (GetExampleResponse);
  rpc UpdateExample(UpdateExampleRequest) returns (UpdateExampleResponse);
  rpc DeleteExample(DeleteExampleRequest) returns (DeleteExampleResponse);
}

message CreateExampleRequest {}
message GetExampleRequest {}
message UpdateExampleRequest {}
message DeleteExampleRequest {}

message CreateExampleResponse {}
message GetExampleResponse {}
message UpdateExampleResponse {}
message DeleteExampleResponse {}